# Wavy-Labs-Code-Base-

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  do_build_lmms.bat  do_configure.bat  mkdocs.yml
.github/workflows/: build.yml  license-server-tests.yml  python-tests.yml  release.yml
cmake/scripts/: CopyPlugins.cmake
data/: resources.qrc
data/projects/templates/: default.mpt
data/qml/: BeatGridWidget.qml  ChatPage.qml  ChordWidget.qml  CodePage.qml  ConsolePage.qml  DashboardPage.qml  FixCardWidget.qml  GeneratePage.qml  GlassCard.qml  GlowButton.qml  InstrumentBrowser.qml  LibraryPage.qml  MainPanel.qml  MixPage.qml  NoteGridWidget.qml  PillTabBar.qml  ProGate.qml  SFXPage.qml  SectionLabel.qml  ToolsPage.qml  VocalPage.qml
data/shaders/: wavy_bg.frag
data/themes/wavy-crimson/: style.qss
data/themes/wavy-midnight/: style.qss
data/themes/wavy-orangesicle/: style.qss
data/themes/wavy-ruby/: style.qss
data/themes/wavy-silver/: style.qss
data/themes/wavy-sunset/: style.qss
doc/: AUTHORS
docs/: faq.md  index.md  plan.txt  tiers.md
docs/dev/: building.md  contributing.md  ipc-protocol.md  rpc-methods.md  stripe-setup.md
docs/features/: code-to-music.md  mix-master.md  music-generation.md  prompt-commands.md  stem-splitting.md  vocal-generation.md
docs/getting-started/: installation.md  quickstart.md  requirements.md
scripts/: deploy.sh  install_lmms_deps.bat  setup_carla.bat
src/: AISideBarPage.h  main.cpp
wavy-ai/: __init__.py  config.py  crash_reporter.py  download_models.py  model_check.py  pyproject.toml  requirements.txt  requirements_base.txt  rpc_handlers.py  server.py  start.bat  start.sh
wavy-ai/agents/: __init__.py  chat_agent.py  compose_agent.py
wavy-ai/cloud/: anthropic_provider.py  elevenlabs_provider.py  elevenlabs_voices.py  groq_provider.py  router.py
wavy-ai/data/: instrument_catalog.json  slakh_index.json
wavy-ai/models/: __init__.py  base.py  code_to_music.py  demucs.py  mixer.py  musicgen.py  prompt_cmd.py  registry.py  text2midi.py
wavy-ai/rpc/: __init__.py  audio.py  core.py  elevenlabs.py  fx.py  helpers.py  instruments.py  library.py  midi.py
wavy-ai/scripts/: build_instrument_catalog.py
wavy-ai/tests/: __init__.py  conftest.py  test_chat_agent.py  test_chat_widgets.py  test_cloud_providers.py  test_code_to_music.py  test_compose_agent.py  test_elevenlabs_provider.py  test_elevenlabs_rpc.py  test_midi_library.py  test_mixer.py  test_model_check.py  test_model_registry.py  test_rpc_handlers.py  test_rpc_protocol.py
wavy-ai/utils/: __init__.py  arp_generator.py  audio_fx.py  granular.py  instrument_catalog.py  json_extract.py  loop_library.py  midi_browser.py  midi_library.py  music_theory.py  pitch_utils.py  riser_generator.py  soundfont_manager.py
wavy-installer/: CMakeLists.txt  deploy_railway.sh  linux-appimage.sh  macos.sh  prepare_installer.bat  version.rc.in  windows.nsi
wavy-license-server/: .dockerignore  Dockerfile  alembic.ini  config.py  database.py  docker-compose.yml  email_sender.py  license_utils.py  main.py  models.py  railway.toml  requirements-dev.txt  requirements.txt  setup_stripe.py  start.sh  supabase_schema.sql  supabase_sync.py
wavy-license-server/migrations/: env.py
wavy-license-server/migrations/versions/: 0001_initial_schema.py
wavy-license-server/tests/: conftest.py  test_api.py  test_license_utils.py
wavy-ui/: CMakeLists.txt
wavy-ui/AIPanel/: AIPanel.cpp  AIPanel.h  GenerationHistoryWidget.cpp  GenerationHistoryWidget.h
wavy-ui/Arrangement/: WavyArrangementView.cpp  WavyArrangementView.h  WavyPianoRollBar.cpp  WavyPianoRollBar.h
wavy-ui/CodeToMusic/: CodeEditor.cpp  CodeEditor.h
wavy-ui/Dialogs/: AboutDialog.cpp  AboutDialog.h  OnboardingWizard.cpp  OnboardingWizard.h
wavy-ui/EngineAPI/: EngineAPI.cpp  EngineAPI.h  LmmsEngine.cpp  LmmsEngine.h  StubEngine.cpp  StubEngine.h
wavy-ui/IPC/: AIClient.cpp  AIClient.h  BackendLauncher.cpp  BackendLauncher.h
wavy-ui/LicenseGate/: ApiKeySettings.cpp  ApiKeySettings.h  LicenseManager.cpp  LicenseManager.h  LoginDialog.cpp  LoginDialog.h  UsageTracker.cpp  UsageTracker.h
wavy-ui/Mixer/: ChannelStrip.cpp  ChannelStrip.h  VUMeter.cpp  VUMeter.h  WavyMixerView.cpp  WavyMixerView.h
wavy-ui/ModelManager/: ModelDownloader.cpp  ModelDownloader.h  ModelManager.cpp  ModelManager.h  ModelManagerPanel.cpp  ModelManagerPanel.h
wavy-ui/PromptBar/: PromptBar.cpp  PromptBar.h
wavy-ui/QML/: AIBackend.cpp  AIBackend.h  ChatMessageModel.cpp  ChatMessageModel.h  GenerationListModel.cpp  GenerationListModel.h  GenreModes.h  GmInstrumentMap.h
wavy-ui/Shell/: WavyShell.cpp  WavyShell.h
wavy-ui/StemSplitter/: StemSplitterPanel.cpp  StemSplitterPanel.h
wavy-ui/ThemeManager/: ThemeManager.cpp  ThemeManager.h  WavyTheme.cpp  WavyTheme.h
wavy-ui/Transport/: GenreConfigPopup.cpp  GenreConfigPopup.h  TransportBar.cpp  TransportBar.h
