[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "wavy-ai"
version     = "1.0.0"
description = "Wavy Labs AI backend — local music generation, stem splitting, vocal synthesis"
readme      = "README.md"
license     = { text = "GPL-2.0-only" }
requires-python = ">=3.10"
authors = [{ name = "Wavy Labs", email = "dev@wavylabs.io" }]

dependencies = [
    "pyzmq>=25.1.2",
    "python-dotenv>=1.0.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "transformers>=4.40.0",
    "diffusers>=0.27.0",
    "accelerate>=0.28.0",
    "soundfile>=0.12.1",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "einops>=0.7.0",
    "demucs>=4.0.1",
    "librosa>=0.10.1",
    "pyloudnorm>=0.1.1",
    "pedalboard>=0.9.0",
    "lark>=1.1.9",
    "pandas>=2.2.0",
    "mido>=1.3.0",
    "pretty_midi>=0.2.10",
    "anthropic>=0.25.0",
    "groq>=0.4.0",
    "elevenlabs>=1.0.0",
    "httpx>=0.27.0",
    "sentry-sdk>=2.3.1",
    "huggingface_hub>=0.22.2",
    "tqdm>=4.66.2",
    "pydantic>=2.6.4",
    "loguru>=0.7.2",
    "appdirs>=1.4.4",
]

[project.optional-dependencies]
local-llm = [
    "llama-cpp-python>=0.2.56",
]
cuda = [
    "onnxruntime-gpu>=1.17.1",
]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.8.0",
]

[project.scripts]
wavy-ai = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "agents*", "cloud*", "utils*"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version  = "3.10"
ignore_missing_imports = true
strict          = false

[tool.pytest.ini_options]
testpaths   = ["tests"]
asyncio_mode = "auto"
timeout      = 120
